<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- App -->
    <string name="app_name">Juggling Lab</string>
    <string name="app_url">http://code.google.com/p/jugglinglab</string>
    
    <!-- Home -->
    <string name="home_btn_pattern_entry">Pattern Entry</string>
    <string name="home_btn_generator">Generator</string>
    <string name="home_btn_tutorials">Tutorials</string>
    <string name="home_btn_pattern_list">Pattern List</string>
    <string name="home_btn_my_profile">My Profile</string>
    <string name="home_btn_video">Video</string>
    <string name="footer_txt_last">Last trick practiced:</string>
    
    <!-- Pattern entry -->
    <string name="pattern_entry_title">Pattern Entry</string>
    <string name="pattern_entry_txt_pattern">Pattern Entry</string>
    <string name="pattern_entry_edit_pattern">3</string>
    <string name="pattern_entry_txt_hand_movement">Hand movement</string>
    <string name="pattern_entry_txt_prop_type">Prop type</string>
    <string name="pattern_entry_txt_dwell_beats">Dwell</string>
    <string name="pattern_entry_txt_beats_per_second">BPS</string>
    <string name="pattern_entry_txt_body_movement">Body movement</string>
    <string name="pattern_entry_txt_manual_settings">Manual settings</string>
    <string name="pattern_entry_btn_juggle">Juggle</string>
    
    <!-- Pattern info -->
    <string name="pattern_info_txt_display">Display</string>
    <string name="pattern_info_txt_pattern">Pattern</string>
    
    <!-- Generator -->
    <string name="generator_title">Generator</string>
    <string name="generator_txt_balls">Balls</string>
    <string name="generator_edit_balls">5</string>
    <string name="generator_txt_max_throw">Max. throw</string>
    <string name="generator_edit_max_throw">7</string>
    <string name="generator_txt_rhythm">Rhythm</string>
    <string name="generator_txt_jugglers">Jugglers</string>
    <string name="generator_txt_period">Period</string>
    <string name="generator_edit_period">5</string>
    <string name="generator_txt_compositions">Compositions</string>
    <string name="generator_txt_find">Find:</string>
    <string name="generator_cb_ground_state_patterns">Ground state patterns</string>
    <string name="generator_cb_excited_state_patterns">Excited state patterns</string>
    <string name="generator_cb_transition_throws">Transition throws</string>
    <string name="generator_cb_pattern_rotations">Pattern rotations</string>
    <string name="generator_cb_juggler_permutations">Juggler permutations</string>
    <string name="generator_cb_connected_patterns_only">Connected patterns only</string>
    <string name="generator_txt_multiplexing">Multiplexing:</string>
    <string name="generator_cb_enable">Enable</string>
    <string name="generator_txt_simultaneous_throws">Simultaneous throws</string>
    <string name="generator_edit_simultaneous_throws">2</string>
    <string name="generator_cb_no_simultaneous_catches">No simultaneous catches</string>
    <string name="generator_cb_no_clustered_throws">No clustered throws</string>
    <string name="generator_cb_true_multiplexing_only">True multiplexing only</string>
    <string name="generator_txt_exclude_these_expressions">Exclude these expressions</string>
    <string name="generator_txt_include_these_expressions">Include these expressions</string>
    <string name="generator_txt_passing_communication_delay">Passing communication delay</string>
    <string name="generator_edit_passing_communication_delay">0</string>
    <string name="generator_btn_run">Run</string>
    
    <!-- Generator List -->
    <string name="generator_list_title">%d patterns found</string>
    <string name="generator_list_generating_siteswaps">Generating siteswaps</string>
    
    <!-- Tutorials -->
    <string name="tutorials_title">Tutorials</string>
    
    <!-- Pattern List -->
    <string name="pattern_list_title">Pattern List</string>
    
    <!-- My profile -->
    <string name="my_profile_title">My profile</string>
    <string name="my_profile_tab_starred">Starred</string>
    <string name="my_profile_tab_unsorted">Unsorted</string>
    <string name="my_profile_tab_goals">Goals</string>
    <string name="my_profile_tab_training">Training</string>
    
    <!-- Video -->
    <string name="video_title">Video</string>
    
    <!-- Animation -->
    <string name="animation_rendering">Rendering</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_jugglinglab">
    
    	\nJuggling Lab is based on the desktop application also
        called Juggling Lab http://jugglinglab.sourceforge.net.\n\n
        
        Juggling Lab is an application for creating and animating juggling patterns.
        Its main goals are to help people learn juggling patterns, and to assist in inventing new ones.\n\n
        
        Features:\n
         - Animates all solo siteswap patterns, including synchronous and multiplexed patterns, and patterns involving movement of the juggler bodies\n
    	 - XML-based pattern description language JML (Juggling Markup Language), permits fine-grained control of ball, hand, and body movements\n
    	 - Realistic hand model, with cubic spline hand paths that match the velocities of balls at throwing points\n
    	 - Integrated siteswap pattern generator\n
    	 - Integrated tutorials and pattern list (over 400 patterns)\n\n
    	 
    	Authors:\n
		This application has been developed by Frédéric RAYAR, and Romain RICHARD.\n
		If you have any questions, comments, or suggestions,\n
		please contact us at [frederic.rayar@gmail.com] or [romain.richard.IT.engineer@gmail.com].\n\n
		
		License:\n
		This software is provided under LGPL v.3 license.\n
		Exact definition can be at the following link: http://www.gnu.org/licenses/lgpl.html\n\n
		
		Acknowledgments:\n
		External libraries are used in the project, and makes extensive use of the following persons code:\n
		 - GreenDroid, by Cyril Mottier - https://github.com/cyrilmottier/GreenDroid
        </string>
    
    <!-- TODO Romain (Help): Help -->
    
    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    
    <!-- QuickActions -->
    <string name="quickactions_trick_collections">Labels</string>
    <string name="quickactions_trick_share">Share using</string>
    <string name="quickactions_trick_share_training">Training %1$s thanks to Juggling Lab for Android !</string>
    <string name="quickactions_trick_catches">Catches</string>
    <string name="quickactions_trick_stats">Stats</string>
    <string name="quickactions_delete">Delete</string>
    <string name="quickactions_delete_confirmation">Delete %s ?</string>
    
    <!-- Other -->
    <string name="advanced_mode">Advanced mode</string>
    <string name="activated">activated</string>
    <string name="deactivated">deactivated</string>
    <string name="txt_no_patterns">No patterns found!</string>
    <string name="error_pattern">Couldn\'t find the pattern!</string>
    <string name="please_wait">Please wait...</string>
    <string name="invalid_pattern">Invalid pattern!</string>
    
    <!-- Settings -->
    <string name="settings_category_user">User</string>
    <string name="settings_cb_advanced_mode_title">Advanced mode</string>
    <string name="settings_cb_advanced_mode_summary">Activate the advanced mode</string>

    <string name="settings_category_generator">Generator</string>
    <string name="settings_txt_max_patterns_title">Patterns</string>
    <string name="settings_txt_max_patterns_summary">Maximum number of patterns to print</string>
    <string name="settings_txt_max_seconds_title">Time</string>
    <string name="settings_txt_max_seconds_summary">Maximum number of seconds</string>

    <!-- TODO Fred: Change the names of the strings to follow the pattern settings_{type}_{name} with type in [category, txt, cb, ...]-->
    <string name="settings_category_animation">Animation</string>

    <string name="settings_category_background">Background</string>
    <string name="settings_category_background_color">Color</string>

    <string name="settings_category_prop">Prop</string>
    <string name="settings_category_prop_type">Type</string>
    <string name="settings_category_prop_color">Color</string>
    <string name="settings_category_prop_color_category_all">All Props</string>
    <string name="settings_category_prop_color_color">One Color</string>    
    <string name="settings_category_prop_color_category_mixed_title">Mixed</string>
    <string name="settings_category_prop_color_category_mixed_summary">Use predefined mixed colors</string>
    <string name="settings_category_prop_color_category_pbp_title">Prop by Prop</string>
    <string name="settings_category_prop_size">Size</string>

    <string name="settings_category_juggler">Juggler</string>
    <string name="settings_category_juggler_color_category_all">All Props</string>
    <string name="settings_category_juggler_color_color">One Color</string>  
    <string name="settings_category_juggler_color_category_mixed_title">Mixed</string>
    <string name="settings_category_juggler_color_category_mixed_summary">Use predefined mixed colors</string>
    <string name="settings_category_juggler_color_category_jbj_title">Juggler by Juggler</string>
    <string name="settings_txt_juggler_height_title">Height</string>
    <string name="settings_txt_juggler_height_summary">The height of the juggler</string>
    <string name="settings_txt_juggler_weight_title">Weight</string>
    <string name="settings_txt_juggler_weight_summary">The weight of the juggler</string>

    <string name="settings_category_juggler_hat">Hat</string>

    <string name="settings_category_juggler_glasses">Glasses</string>

    <string name="settings_category_juggler_beard">Beard</string>
    
</resources>
